--- a/.env
+++ b/.env
@@ -28,5 +28,10 @@ APP_SECRET=e56b82f5c86627f69f144f0b34d84cde
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL=mysql://root:rootpassword@mariadb:3306/learnit
 ###< doctrine/doctrine-bundle ###
+
+DB_HOST=mariadb
+DB_PORT=3306
+MYSQL_DATABASE=learnit
+MYSQL_ROOT_PASSWORD=rootpassword
