--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+# dependencies
+node_modules
+node_modules/
+/.pnp
+.pnp.js
+
 # .idea files
 ./idea
-
 
 ###> symfony/framework-bundle ###
 /.env.local
